# gencon-events-slack-bot

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  events.py  pyproject.toml
.github/workflows/: docker-build-deploy.yml
